Encode: Clear right and bottom border of NV12 surface to avoid run2run issue

This fixes some issues mentioned in https://bugs.freedesktop.org/show_bug.cgi?id=96703

Signed-off-by: Xu Guangxin <guangxin.xu@intel.com>
Reviewed-by: Sean V Kelley <seanvk@posteo.de>
Tested-by: Mingruo Sun <mingruo.sun@intel.com>